// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SketchProvider /> > renders children correctly 1`] = `
<div>
  Test Child
</div>
`;

exports[`<SketchProvider /> > uses the correct jotai Provider and store 1`] = `
<div>
  <span>
    Child
  </span>
</div>
`;
